# auto_click

./: .coverage-tmp.html  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  GEMINI.md  README.md  README.zh-CN.md  README.zh-TW.md  README_cn.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  start.bat  start_cn.bat  start_tw.bat  test.ipynb  test.py
.devcontainer/: Dockerfile
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: build.yml  build_image.yml  build_package.yml  code-quality-check.yml  code_scan.yml  pre-commit-updater.yml  release_drafter.yml  test.yml
API/compare/: index.html
API/screenshot/: index.html
API/types/config/: index.html
API/types/image_models/: index.html
API/types/output_models/: index.html
API/utils/adb/: index.html
API/utils/command/: index.html
API/utils/command_utils/: index.html
API/utils/get_serial/: index.html
API/utils/logger/: index.html
Reference/compare/: index.html
Reference/controller/: index.html
Reference/notifications/base_notify/: index.html
Reference/notifications/discord_notify/: index.html
Reference/screenshot/: index.html
Reference/types/config/: index.html
Reference/types/database/: index.html
Reference/types/image_models/: index.html
Reference/types/output_models/: index.html
Reference/utils/command_utils/: index.html
Reference/utils/compare/: index.html
Reference/utils/config/: index.html
Reference/utils/discord_notify/: index.html
Reference/utils/get_serial/: index.html
Reference/utils/manager/: index.html
Reference/utils/notification/: index.html
Reference/utils/notify/: index.html
Reference/utils/screenshot/: index.html
Scripts/detection/: index.html
Scripts/gen_docs/: index.html
Scripts/screenshot/: index.html
blog/: index.html
blog/2024/10/06/this-is-an-example-post-for-blog/: index.html
blog/archive/2024/: index.html
configs/: all_stars.yaml  all_stars_cn.yaml  configs.yaml  mahjong.yaml  settings.yaml  simulator.yaml
configs/games/: all_stars.yaml  all_stars_cn.yaml  default.yaml  league.yaml  mahjong.yaml
configs/path/: all_stars.yaml  mahjong.yaml
configs/settings/: all_stars.yaml  mahjong.yaml
data/: positions.csv
docker/: Dockerfile
docker/mirror/: config.toml
docs/: README.zh-CN.md  README.zh-TW.md  index.md  index_cn.md
docs/API/: compare.md  screenshot.md
docs/API/types/: config.md  image_models.md  output_models.md
docs/API/utils/: adb.md  command.md  logger.md
docs/installation/: index.md  pip.md  rye.md
examples/: huggingface_api_vision.py
installation/: index.html
installation/pip/: index.html
installation/rye/: index.html
notebooks/: adb_screenshot.ipynb  adb_test.ipynb  check_image.ipynb
scripts/: async_test.py  build.ps1  detection.py  gen_docs.py  image2text.py  scrach.py  screenshot.py  tos.py
search/: search_index.json
src/: compare.py  connect_to_current_window.py  controller.py  find_matched.py  get_screen.py  screenshot.py
src/auto_click/: cli.py  controller.py
src/auto_click/core/: manager.py
src/auto_click/cores/: compare.py  manager.py  notify.py  screenshot.py
src/auto_click/utils/: compare.py  manager.py  notify.py  screenshot.py
src/models/: env_models.py  image_models.py  output_models.py
src/notifications/: discord_notify.py  notification.py
src/types/: __init__.py  config.py  database.py  game.py  image_models.py  output.py  output_models.py  simulator.py
src/utils/: __init__.py  command_utils.py  compare.py  config.py  config_utils.py  discord.py  discord_notify.py  get_process.py  get_serial.py  logger.py  manager.py  notification.py  notify.py  position.py  screenshot.py
tests/: test_config.py  test_export.py  test_images.py
